# WordleSuggester

./: .env.example  README.md  main.py  pyproject.toml
src/wordle_suggester/cogs/: wordle.py
src/wordle_suggester/utils/: cleaner.py  entropy.py  logger.py
